--- a/backend/public/buyer/buyer.html
+++ b/backend/public/buyer/buyer.html
@@ -32,9 +32,12 @@
 
   <!-- ===== 公告列 ===== -->
   <div id="announcementBar" class="announcement-bar">
+    <span class="announcement-icon">📢</span>
+
     <div class="announcement-inner">
-      <span class="icon">📢</span>
-      <span id="announcementText">（公告載入中）</span>
+      <span id="announcementText" class="announcement-scroll">
+        （公告載入中）
+      </span>
     </div>
   </div>
 
